discussion/kv_engine/177001/177001_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Move throttle_test to its own test suite

Change-Id: Ic55623bb6a5c7fd4e7ab87fb391d1c9cb1e29057

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 07:44:11.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 08:00:24.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47288/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47288/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21395/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21395/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20407/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20407/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8293/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8293/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20755/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20755/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28788/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28788/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19629/ : ABORTED

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_value_only":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_value_only
[2022-07-03T08:00:08.137Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1331: Failure
[2022-07-03T08:00:08.137Z] Expected: (activeRR) < (100), actual: 100 vs 100
[2022-07-03T08:00:08.137Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_value_only, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=value_only" (6679 ms)
EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19629/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19629/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18523/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11: error: unknown type name "size_t" [clang-diagnostic-error]
constexpr size_t MaxConnectionsPerBucket = 16;
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:23:8: error: use of undeclared identifier "std" [clang-diagnostic-error]
extern std::unique_ptr<cb::test::Cluster> cluster;
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/throttle_test.cc:23:21: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
        auto conn = cluster->getConnection(0);
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/throttle_test.cc:58:22: error: no member named "thread" in namespace "std" [clang-diagnostic-error]
    std::vector<std::thread> threads;
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/throttle_test.cc:58:30: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
    std::vector<std::thread> threads;
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/throttle_test.cc:61:22: error: no member named "thread" in namespace "std" [clang-diagnostic-error]
                std::thread{[func, name = "bucket-" + std::to_string(ii)]() {
                     ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18523/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11:
error: unknown type name "size_t" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18523/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8194/ : FAILURE

Compile error at [2022-07-03T07:56:26.723Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11:
error: unknown type name "size_t"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8194/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17675/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39735/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
